Bug 331104 - Chatwindows close immediately if common-internals is built with telepathy-logger installed
Summary: Chatwindows close immediately if common-internals is built with telepathy-log...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: common-internals (other bugs)
Version First Reported In: 0.7.1
Platform: unspecified FreeBSD
: NOR grave
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-13 17:06 UTC by Tobias C. Berner
Modified: 2014-04-10 19:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias C. Berner 2014-02-13 17:06:35 UTC
Opening a chat from the contact list opens the chat window, but crashes immediately afterwards. The same can be achieved by clicking on a contact in ktp-log-viewer.



Reproducible: Always

Steps to Reproduce:
1. Build 0.7.1 with telepathy-logger-qt4 installed
2. Run ktp-contactclist or ktp-log-viewer
3. [Double-]Click on a contact
Actual Results:  
Crash, see traceback in Additional Information.


[KCrash Handler]
#8  0x0000000807a31f5a in thr_kill () from /lib/libc.so.7
#9  0x0000000807af9ad9 in abort () from /lib/libc.so.7
#10 0x000000080521e458 in qt_message_output () from /usr/local/lib/qt4/libQtCore.so.4
#11 0x000000080521e6a8 in qDebug () from /usr/local/lib/qt4/libQtCore.so.4
#12 0x000000080521dfed in qFatal () from /usr/local/lib/qt4/libQtCore.so.4
#13 0x000000085e3342b1 in PendingTpLoggerLogs::logsRetrieved (this=0x85f4300e0, op=<value optimized out>) at refpointer.h:341
#14 0x00000008053377f2 in QMetaObject::activate () from /usr/local/lib/qt4/libQtCore.so.4
#15 0x000000080bca886f in Tpl::PendingOperation::finished (this=0x81c9c5960, _t1=0x81c9c5960) at pending-operation.moc.hpp:110
#16 0x000000080bca8fb1 in Tpl::PendingOperation::emitFinished (this=0x81c9c5960)
    at /tmp/usr/ports/net-im/telepathy-logger-qt4/work/telepathy-logger-qt-0.6.0/TelepathyLoggerQt4/pending-operation.cpp:98
#17 0x000000080bca87fb in Tpl::PendingOperation::qt_static_metacall (_o=0x81c9c5960, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x81c9c3e00) at pending-operation.moc.hpp:61
#18 0x000000080533352e in QObject::event () from /usr/local/lib/qt4/libQtCore.so.4
#19 0x00000008060dac2b in QApplicationPrivate::notify_helper () from /usr/local/lib/qt4/libQtGui.so.4
#20 0x00000008060dd908 in QApplication::notify () from /usr/local/lib/qt4/libQtGui.so.4
#21 0x0000000801073f50 in KApplication::notify () from /usr/local/lib/libkdeui.so.5
#22 0x0000000805320515 in QCoreApplication::notifyInternal () from /usr/local/lib/qt4/libQtCore.so.4
#23 0x000000080532104b in QCoreApplicationPrivate::sendPostedEvents () from /usr/local/lib/qt4/libQtCore.so.4
#24 0x000000080534d2c8 in QEventDispatcherGlib::QEventDispatcherGlib () from /usr/local/lib/qt4/libQtCore.so.4
#25 0x000000080bf136f2 in g_main_context_dispatch () from /usr/local/lib/libglib-2.0.so.0
#26 0x000000080bf13a93 in g_main_context_iterate () from /usr/local/lib/libglib-2.0.so.0
#27 0x000000080bf13b24 in g_main_context_iteration () from /usr/local/lib/libglib-2.0.so.0
#28 0x000000080534ca0e in QEventDispatcherGlib::processEvents () from /usr/local/lib/qt4/libQtCore.so.4
#29 0x000000080617a8bd in QX11Info::isCompositingManagerRunning () from /usr/local/lib/qt4/libQtGui.so.4
#30 0x000000080531dae7 in QEventLoop::exec () from /usr/local/lib/qt4/libQtCore.so.4
#31 0x0000000805320aad in QCoreApplication::exec () from /usr/local/lib/qt4/libQtCore.so.4
#32 0x0000000000410d99 in main (argc=<value optimized out>, argv=<value optimized out>) at /tmp/usr/ports/net-im/ktp-text-ui/work/ktp-text-ui-0.7.1/app/main.cpp:92
Comment 1 David Edmundson 2014-02-13 17:09:31 UTC
#12 0x000000080521dfed in qFatal () from /usr/local/lib/qt4/libQtCore.so.4

This is printing an error, could you show us what that error is.

If you start the text-ui by hand, with 
/usr/lib/kde4/libexec/ktp-text-ui --debug --persist

and then reproduce the crash.
Comment 2 David Edmundson 2014-02-13 17:09:54 UTC
Mark as waiting for info.
Comment 3 Tobias C. Berner 2014-02-13 17:27:30 UTC
%  /usr/local/lib/kde4/libexec/ktp-text-ui --debug --persist
QDBusConnection: session D-Bus connection created before QCoreApplication. Application may misbehave.
ktp-text-ui(12712): No language dictionaries for the language :  "de" 

ktp-text-ui(12712)/kdeui (kdelibs): Attempt to use QAction "language" with KXMLGUIFactory! 
ktp-text-ui(12712)/Telepathy-Qt tp-qt:0.9.3: Error parsing config file for connection manager "haze" - introspecting  
ktp-text-ui(12712)/Telepathy-Qt tp-qt:0.9.3: Error parsing config file for connection manager "haze" - introspecting  
ktp-text-ui(12712)/Telepathy-Qt tp-qt:0.9.3: Channel::groupLocalPendingContacts() used with no group interface  
ktp-text-ui(12712): No language dictionaries for the language :  "de" 

ktp-text-ui(12712): No language dictionaries for the language :  "de" 

ktp-text-ui(12712): No language dictionaries for the language :  "de" 

ktp-text-ui(12712): No language dictionaries for the language :  "de" 

ktp-text-ui(12712): No language dictionaries for the language :  "de" 

ktp-text-ui(12712): No language dictionaries for the language :  "de" 

tp-qt4-tpl DEBUG:  static Tpl::Utils *Tpl::Utils::instance()  :  Created Utils instance 
tp-qt4-tpl DEBUG:  TpAccount *Tpl::Utils::tpAccount(const Tp::AccountPtr &)  :  account= true 
tp-qt4-tpl DEBUG:  TpAccount *Tpl::Utils::tpAccount(const Tp::AccountPtr &)  :  objectPath= "/org/freedesktop/Telepathy/Account/gabble/jabber/xxxyyyzzz" 
tp-qt4-tpl DEBUG:  TpAccountManager *Tpl::Utils::tpAccountManager()  :  
tp-qt4-tpl DEBUG:  TpAccount *Tpl::Utils::tpAccount(const Tp::AccountPtr &)  :  account= 0x81c926000 

(process:12712): tp-glib-CRITICAL **: const gchar *tp_asv_get_string(const GHashTable *, const gchar *): assertion `asv != NULL' failed
tp-qt4-tpl DEBUG:  TpAccount *Tpl::Utils::tpAccount(const Tp::AccountPtr &)  :  account= true 
tp-qt4-tpl DEBUG:  TpAccount *Tpl::Utils::tpAccount(const Tp::AccountPtr &)  :  objectPath= "/org/freedesktop/Telepathy/Account/gabble/jabber/xxxyyyzzz" 
tp-qt4-tpl DEBUG:  TpAccountManager *Tpl::Utils::tpAccountManager()  :  
tp-qt4-tpl DEBUG:  TpAccount *Tpl::Utils::tpAccount(const Tp::AccountPtr &)  :  account= 0x81c926000 
tp-qt4-tpl DEBUG:  TpAccount *Tpl::Utils::tpAccount(const Tp::AccountPtr &)  :  account= true 
tp-qt4-tpl DEBUG:  TpAccount *Tpl::Utils::tpAccount(const Tp::AccountPtr &)  :  objectPath= "/org/freedesktop/Telepathy/Account/gabble/jabber/xxxyyyzzz" 
tp-qt4-tpl DEBUG:  TpAccountManager *Tpl::Utils::tpAccountManager()  :  
tp-qt4-tpl DEBUG:  TpAccount *Tpl::Utils::tpAccount(const Tp::AccountPtr &)  :  account= 0x81c926000 
ASSERT failure in RefPointer::operator->() const: "Attempted to dereference a null pointer", file /usr/local/include/QtGStreamer/QGlib/refpointer.h, line 354
KCrash: Application 'ktp-text-ui' crashing...
KCrash: Attempting to start /usr/local/lib/kde4/libexec/drkonqi from kdeinit
sock_file=/home/Tobias/.kde4/socket-noxon.firefly/kdeinit4__0
Comment 4 David Edmundson 2014-02-13 17:28:06 UTC
Thanks
Comment 5 Tobias C. Berner 2014-03-03 20:01:12 UTC
Hi, this still persists in 0.7.80
Comment 6 Daniel Vrátil 2014-04-10 19:01:29 UTC
Git commit ccd4d133ba4becb7c8662eb3e57612e8aa9773e4 by Dan Vrátil.
Committed on 10/04/2014 at 18:58.
Pushed by dvratil into branch 'kde-telepathy-0.8'.

Don't crash when TelepathyLoggerQt4 returns a null TextEvent

Tpl::PendingEvents sometimes returns a list of events that includes a null
event, which leads to a crash when we try to dereference it (either by
hitting an assert in QtGlib, or by calling methods on a null pointer).
FIXED-IN: 0.8.1

M  +5    -0    KTp/Logger/plugins/tplogger/pending-tp-logger-logs.cpp

http://commits.kde.org/telepathy-common-internals/ccd4d133ba4becb7c8662eb3e57612e8aa9773e4