Don't crash when TelepathyLoggerQt4 returns a null TextEvent

Tpl::PendingEvents sometimes returns a list of events that includes a null
event, which leads to a crash when we try to dereference it (either by
hitting an assert in QtGlib, or by calling methods on a null pointer).

BUG: 331104
FIXED-IN: 0.8.1