KTp/Logger/plugins/tplogger/pending-tp-logger-logs.cpp
@@ -60,6 +60,11 @@ void PendingTpLoggerLogs::logsRetrieved(Tpl::PendingOperation *op)
     QList<KTp::LogMessage> logs;
     Q_FOREACH (const Tpl::EventPtr &event, events) {
         const Tpl::TextEventPtr textEvent = event.dynamicCast<Tpl::TextEvent>();
+        if (textEvent.isNull()) {
+            kDebug() << "Received a null TextEvent!";
+            continue;
+        }
+
         logs << KTp::LogMessage(Utils::fromTplEntity(event->sender()),
                                 account(), event->timestamp(), textEvent->message(),
                                 textEvent->messageToken());
